<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/searchBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/text_input_hint_location"
            android:inputType="textPersonName"
            android:textColor="@color/colorBlack"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20dp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getWeatherFromAPI"
            android:text="@string/button_search"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/basicDataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cityNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="36dp" />

        <TextView
            android:id="@+id/weatherDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/currTempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/widgetsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/widgetsContainer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/maxTempWidget"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorMidGrey"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/widget_maxtemp"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/maxTempTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/minTempWidget"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/colorMidGrey"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/widget_mintemp"
                    android:textColor="@android:color/background_light"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/minTempTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/widgetsContainer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/humidityWidget"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorMidGrey"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/widget_humidity"
                    android:textColor="@android:color/background_light"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/humidityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/background_light"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/windSpeedWidget"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/colorMidGrey"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/widget_windspeed"
                    android:textColor="@android:color/background_light"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/windSpeedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>